refactor: simplify application contracts (#81)
